crude, but functional impl of pagination